--- a/Frends.HIT.Func/Frends.HIT.Func.csproj
+++ b/Frends.HIT.Func/Frends.HIT.Func.csproj
@@ -27,9 +27,7 @@
     </ItemGroup> -->
 
     <ItemGroup>
-      <PackageReference Include="VaultSharp" Version="1.13.0.1" />
-      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-
+      <PackageReference Include="HIT.Vault" Version="0.*" />
     </ItemGroup>
 
 
