--- a/.github/workflows/on-new-release-branch.yml
+++ b/.github/workflows/on-new-release-branch.yml
@@ -29,7 +29,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: HIT.Vault/bin/Release/*.nupkg
+          file: Frends.HIT.Func/bin/Release/*.nupkg
           file_glob: true
           tag: ${{ github.ref }}
           overwrite: true
