--- a/Frends.HIT.Func/Frends.HIT.Func.csproj
+++ b/Frends.HIT.Func/Frends.HIT.Func.csproj
@@ -26,9 +26,9 @@
         </None>
     </ItemGroup> -->
 
-    <ItemGroup>
+    <!-- <ItemGroup>
       <PackageReference Include="HIT.Vault" Version="0.1.*" />
-    </ItemGroup>
+    </ItemGroup> -->
 
 
     
