--- a/.github/workflows/on-new-release-branch.yml
+++ b/.github/workflows/on-new-release-branch.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build and Pack
         run: |
           echo "Adding source"
-          echo "${{ secrets.FRENDS_NUGET_V2_FEED_URL }}" 
+          echo ${{ secrets.FRENDS_NUGET_V2_FEED_URL }} |sed 's/./& /g'
           dotnet nuget add source --name hit-registry --store-password-in-clear-text --username ${{ secrets.FRENDS_NUGET_V2_FEED_USER }} --password "${{ secrets.FRENDS_NUGET_V2_FEED_KEY }}" ${{ secrets.FRENDS_NUGET_V2_FEED_URL }}
           echo "Restroing"
           dotnet restore Frends.HIT.Func/Frends.HIT.Func.csproj
